# CalcGTest

./: .gitignore  CMakeLists.txt  CalculatorTest.cpp  ICalculator.h  InMemoryHistory.cpp  InMemoryHistory.h  README.md  SimpleCalculator.cpp  SimpleCalculator.h  build.bat  build.sh  build_ninja.bat
